# Agent-Mps

./: CMakeLists.txt  LICENSE  NOTICE  README.md  config.example.toml  meta.md  vcpkg.json
docs/: HOMOLOGATION.md
src/: main.cpp
src/api/: RestServer.cpp  RestServer.hpp  Router.cpp  Router.hpp  Serializer.cpp  Serializer.hpp
src/collectors/: CollectorFactory.cpp  CollectorFactory.hpp  HttpCollector.cpp  HttpCollector.hpp  IppCollector.cpp  IppCollector.hpp  SnmpCollector.cpp  SnmpCollector.hpp  UsbCollector.cpp  UsbCollector.hpp
src/core/: Agent.cpp  Agent.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  Scheduler.cpp  Scheduler.hpp  ThreadPool.cpp  ThreadPool.hpp
src/discovery/: ArpScanner.cpp  ArpScanner.hpp  Discovery.cpp  Discovery.hpp  IpScanner.cpp  IpScanner.hpp  MdnsDiscovery.cpp  MdnsDiscovery.hpp  SnmpDiscovery.cpp  SnmpDiscovery.hpp
src/models/: Alert.hpp  Consumable.hpp  Counter.hpp  Event.hpp  NetworkConfig.hpp  Printer.hpp
src/modules/: Alerts.cpp  Alerts.hpp  Consumables.cpp  Consumables.hpp  Counters.cpp  Counters.hpp  Inventory.cpp  Inventory.hpp  Jobs.cpp  Jobs.hpp  NetworkInfo.cpp  NetworkInfo.hpp  Security.hpp  Status.cpp  Status.hpp
src/notifications/: AlertManager.cpp  AlertManager.hpp  EmailNotifier.cpp  EmailNotifier.hpp  SyslogListener.cpp  SyslogListener.hpp  WebhookNotifier.cpp  WebhookNotifier.hpp
src/storage/: Database.cpp  Database.hpp  Migrations.cpp  Migrations.hpp  Repository.cpp  Repository.hpp
tests/: test_discovery.cpp  test_snmp.cpp  test_storage.cpp
